syntax = "proto3";

package pb;

option go_package = "github.com/michael-m-truong/fitness-tracker/pb"; 

//protoc --go_out=paths=source_relative:. --go-grpc_out=paths=source_relative:. ./pb/exercise.proto

message Exercise {
    int32 id = 1;
    NewExercise exercise = 2;
}

message ExerciseIds {
    repeated int32 exercise_ids = 1;
}

message ExerciseExistence {
    bool exists = 1;
}

message NewExercise {
    string name = 1;
    string description = 2;
    string muscle_group = 3;
    int32 user_id = 4;
}

message Workout {
    int32 id = 1;
    NewWorkout workout = 2;
}

message NewWorkout {
    string name = 1;
    string description = 2;
    repeated int32 exercise_ids = 3; // int arr
    int32 user_id = 4;
}

message User {
    string username = 1;
    string password = 2;
    int32 user_id = 3;
}

message NewUser {
    int32 user_id = 1;
    string username = 2;
    string access_token= 3;  //login on new user creation
}

message AccessToken {
    string token = 1;
}

service ExerciseService {
    rpc CreateExercise(NewExercise) returns (Exercise);
    rpc CheckExerciseExists(ExerciseIds) returns (ExerciseExistence);
}

service WorkoutService {
    rpc CreateWorkout(NewWorkout) returns (Workout);
}

service AuthService {
    rpc Login(User) returns (AccessToken);
    rpc CreateUser(User) returns (NewUser);

    rpc ParseToken(AccessToken) returns (User);
    //rpc GenerateToken(User) returns (AccessToken);
}